# pru_soft_lab

./: README.md
02/: .gitignore  apuntes.md  cap.sh  prompt.md
03/: .gitignore  OBSERVACIONES_MERGE.txt  guía.txt  laboratorio.typ
04/: .gitignore  guia.md  laboratorio.typ  test.typ  test_typst.sh
05_back_glass_box/: README.md  business_rules.md  design.md  laboratorio.typ
05_back_glass_box/development/: .gitignore  Makefile  README.md  pyproject.toml
05_back_glass_box/development/.githooks/: pre-push
05_back_glass_box/development/docs/: BUSQUEDA_ERRORES.typ  DOCUMENTO_TECNICO.md  DOCUMENTO_TECNICO.typ
05_back_glass_box/development/finance/: __main__.py
05_back_glass_box/development/finance/adapters/: __init__.py  ui.py
05_back_glass_box/development/finance/adapters/inbound/ui_python/: __init__.py  app_ui.py  dummy_service.py  test_app_ui.py  views.py
05_back_glass_box/development/finance/adapters/outbound/db_memory/: __init__.py  habit_memory_repository.py  memory_repos.py  test_memory_repos.py  tonto.py
05_back_glass_box/development/finance/config/: bootstrap.py
05_back_glass_box/development/finance/core/: __init__.py  entities.py  services.py  test_services.py
05_back_glass_box/development/finance/core/app/: services.py  test_services.py
05_back_glass_box/development/finance/core/domain/: entities.py  habit.py  test_entities.py
05_back_glass_box/development/finance/core/ports/: inbound.py  outbound.py
05_back_glass_box/development/scripts/: context.sh  install-hooks.sh
06_caja_negra_td_te/: .gitignore  README.md  laboratorio.typ
(+252 files in other folders)
